# sol-trace

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  sample.env
assets/: client_config.toml.example
proto/: cli_service.proto
src/: lib.rs  state.rs
src/client/: app.rs  config.rs  mod.rs  proto_ext.rs  render.rs  state.rs  utils.rs
src/server/: mod.rs  wallet_service.rs
src/server/domain/: data_stores.rs  errors.rs  logs_subscription.rs  mod.rs  off_chain_rpc_client.rs  on_chain_rpc_client.rs  proto_ext.rs  rpc_client.rs  subscription_input.rs  token.rs  token_info.rs  token_price.rs  token_trade.rs  trade_type.rs  ws_client.rs
src/server/domain/solana_api_messages/: error_response.rs  get_transaction_response.rs  logs_subscription.rs  mod.rs
src/server/services/: hashmap_token_store.rs  jupiter_rpc_client.rs  mod.rs  solana_rpc_client.rs  solana_ws_client.rs
src/server/states/: app_state.rs  client_state.rs  mod.rs  subscription_state.rs
src/server/utils/: address.rs  constants.rs  format.rs  holdings.rs  mod.rs  solana.rs  tokens.rs  tracing.rs  transactions.rs
tests/: grpc.rs
tests/api/: helpers.rs  main.rs  wallet_service.rs
