[package]
name = "sol-trace"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
tokio = { version = "1.39", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = "0.7"
tonic = "0.10.2"
prost = "0.12.6"
prost-types = "0.12.6"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4.5", features = ["derive"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
tungstenite = "0.20"
futures-util = "0.3"
url = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
async-trait = "0.1.78"
rustyline = "10"
spl-associated-token-account = { version = "3.0.2", features = [
    "no-entrypoint",
] }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }

[build-dependencies]
tonic-build = "0.10.2"
prost-build = "0.12.6"
